load("@aspect_rules_py//py:defs.bzl", "py_library", "py_test")

py_library(
    name = "api_workflow_lib",
    srcs = [
        "utils.py",
        "workflow.py",
    ],
    deps = [
        "//backend:backend_lib",
        "@pypi//httpx",
        "@pypi//rembg",
        "@pypi//onnxruntime",
    ],
)

py_library(
    name = "api_schema_lib",
    srcs = [
        "__init__.py",
        "apps.py",
        "logging.py",
        "models.py",
        "serializer_factories.py",
        "serializer_registry.py",
        "serializers.py",
        "urls.py",
        "views.py",
    ],
    deps = [
        ":api_workflow_lib",
        "//backend:backend_lib",
        "@pypi//logtail_python",
    ],
)

py_library(
    name = "api_lib",
    srcs = [
        "admin.py",
        "cloudinary_cleanup.py",
        "manual_tile_imports.py",
        "model_factories.py",
        "tasks.py",
    ],
    data = [
        ":api_commands",
        "//:workflow_files",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":api_schema_lib",
        ":api_workflow_lib",
    ],
)

filegroup(
    name = "api_commands",
    srcs = [
        "management/__init__.py",
        "management/commands/__init__.py",
        "management/commands/backpopulate_crops.py",
        "management/commands/clear_crops.py",
        "management/commands/clear_stuck_tasks.py",
        "management/commands/dump_public_library.py",
        "management/commands/import_test_tile_images.py",
        "management/commands/load_public_library.py",
        "management/commands/restore_images_from_backup.py",
    ],
)

filegroup(
    name = "migrations",
    srcs = [
        "migrations/0001_initial.py",
        "migrations/0002_piece_shared.py",
        "migrations/0003_rename_custom_fields.py",
        "migrations/0004_normalize_images.py",
        "migrations/0005_image_crops.py",
        "migrations/0006_asynctask.py",
        "migrations/0007_piece_showcase_fields_piece_showcase_story.py",
        "migrations/__init__.py",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "api_static",
    srcs = glob(["static/**"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "api_runtime_files",
    srcs = [
        ":api_lib",
        ":api_schema_lib",
        ":api_workflow_lib",
        ":api_commands",
        ":migrations",
        ":api_static",
        "__init__.py",
    ],
    visibility = ["//visibility:public"],
)

# ── Shared test infrastructure ────────────────────────────────────────────────

_TEST_DEPS = [
    ":api_lib",
    "@pypi//pytest",
    "@pypi//pytest_django",
    "@pypi//pytest_env",
    "@pypi//pytest_cov",
    "@pypi//tzdata",
]

_TEST_DATA = [
    "//:workflow_files",
    "//:fixtures",
    "//:pytest_ini",
    ":migrations",
    ":api_static",
]

_TEST_ENV = {
    "DJANGO_SETTINGS_MODULE": "backend.test_settings",
    "GLAZE_DEV_BOOTSTRAP": "0",
    "GLAZE_BOOTSTRAP_COUNT": "5",
}

_CONFTEST = [
    "tests/__init__.py",
    "tests/conftest.py",
    "//tools:pytest_main.py",
]

# ── Granular API test targets ─────────────────────────────────────────────────
# Each target covers a coherent slice of the API so that changing one file
# only re-runs the tests that could be affected.

py_test(
    name = "api_workflow_test",
    size = "medium",
    srcs = _CONFTEST + [
        "tests/test_custom_fields.py",
        "tests/test_workflow_globals.py",
        "tests/test_workflow_helpers.py",
    ],
    args = [
        "api/tests/test_workflow_helpers.py",
        "api/tests/test_workflow_globals.py",
        "api/tests/test_custom_fields.py",
    ],
    data = _TEST_DATA,
    env = _TEST_ENV,
    main = "//tools:pytest_main.py",
    deps = _TEST_DEPS,
)

py_test(
    name = "api_model_test",
    size = "medium",
    srcs = _CONFTEST + [
        "tests/test_async_maintenance.py",
        "tests/test_async_tasks.py",
        "tests/test_global_entries.py",
        "tests/test_globals.py",
        "tests/test_image_field_migration.py",
        "tests/test_model_factory.py",
        "tests/test_rembg_init.py",
        "tests/test_utils.py",
    ],
    args = [
        "api/tests/test_async_maintenance.py",
        "api/tests/test_async_tasks.py",
        "api/tests/test_model_factory.py",
        "api/tests/test_rembg_init.py",
        "api/tests/test_globals.py",
        "api/tests/test_utils.py",
        "api/tests/test_global_entries.py",
        "api/tests/test_image_field_migration.py",
    ],
    data = _TEST_DATA,
    env = _TEST_ENV,
    main = "//tools:pytest_main.py",
    deps = _TEST_DEPS,
)

py_test(
    name = "api_piece_test",
    size = "medium",
    srcs = _CONFTEST + [
        "tests/test_analysis.py",
        "tests/test_patch_current_state.py",
        "tests/test_piece_detail.py",
        "tests/test_piece_showcase_validation.py",
        "tests/test_piece_state_admin_relational.py",
        "tests/test_piece_states.py",
        "tests/test_pieces_create.py",
        "tests/test_pieces_list.py",
        "tests/test_sealed_state.py",
    ],
    args = [
        "api/tests/test_pieces_create.py",
        "api/tests/test_pieces_list.py",
        "api/tests/test_piece_detail.py",
        "api/tests/test_piece_states.py",
        "api/tests/test_patch_current_state.py",
        "api/tests/test_sealed_state.py",
        "api/tests/test_analysis.py",
        "api/tests/test_piece_showcase_validation.py",
        "api/tests/test_piece_state_admin_relational.py",
    ],
    data = _TEST_DATA,
    env = _TEST_ENV,
    main = "//tools:pytest_main.py",
    deps = _TEST_DEPS,
)

py_test(
    name = "api_auth_test",
    size = "medium",
    srcs = _CONFTEST + [
        "tests/test_auth.py",
    ],
    args = ["api/tests/test_auth.py"],
    data = _TEST_DATA,
    env = _TEST_ENV,
    main = "//tools:pytest_main.py",
    deps = _TEST_DEPS,
)

py_test(
    name = "api_glaze_test",
    size = "medium",
    srcs = _CONFTEST + [
        "tests/test_glaze_combination.py",
        "tests/test_glaze_combination_admin.py",
        "tests/test_glaze_combination_picker.py",
        "tests/test_manual_square_crop_import.py",
        "tests/test_public_library.py",
        "tests/test_public_library_commands.py",
    ],
    args = [
        "api/tests/test_glaze_combination.py",
        "api/tests/test_glaze_combination_admin.py",
        "api/tests/test_glaze_combination_picker.py",
        "api/tests/test_manual_square_crop_import.py",
        "api/tests/test_public_library.py",
        "api/tests/test_public_library_commands.py",
    ],
    data = _TEST_DATA,
    env = _TEST_ENV,
    main = "//tools:pytest_main.py",
    deps = _TEST_DEPS,
)

py_test(
    name = "api_admin_test",
    size = "medium",
    srcs = _CONFTEST + [
        "tests/test_admin_exports.py",
        "tests/test_cloudinary_cleanup.py",
        "tests/test_cloudinary_image_widget.py",
        "tests/test_cloudinary_upload_signature.py",
    ],
    args = [
        "api/tests/test_admin_exports.py",
        "api/tests/test_cloudinary_cleanup.py",
        "api/tests/test_cloudinary_image_widget.py",
        "api/tests/test_cloudinary_upload_signature.py",
    ],
    data = _TEST_DATA,
    env = _TEST_ENV,
    main = "//tools:pytest_main.py",
    deps = _TEST_DEPS,
)

# ── mypy type-check ───────────────────────────────────────────────────────────
# Runs mypy over all of api/ with the full django + DRF plugins enabled.
# Runs as a single target (coarser than per-library) because mypy_django_plugin
# requires full Django app initialization, which isn't available in per-target
# Bazel sandboxes. TODO: revisit with rules_mypy once resolved — see
# https://github.com/shaoster/glaze/issues/157

py_test(
    name = "api_mypy",
    size = "medium",
    srcs = ["//tools:mypy_main.py"],
    args = ["api/"],
    data = [
        "//:mypy.ini",
        "//:workflow_files",
    ],
    env = {"DJANGO_SETTINGS_MODULE": "backend.settings"},
    main = "//tools:mypy_main.py",
    tags = [
        "lint",
        "no-coverage",
    ],
    deps = [
        ":api_lib",
        "@pypi//mypy",
        "@pypi//mypy_extensions",
        "@pypi//django_stubs",
        "@pypi//django_stubs_ext",
        "@pypi//djangorestframework_stubs",
        "@pypi//types_requests",
    ],
)

# ── API test suite ────────────────────────────────────────────────────────────
# Aggregate target: `bazel test //api:api_test` runs all API tests.
# Individual targets above run only when their inputs change.

test_suite(
    name = "api_test",
    tests = [
        ":api_admin_test",
        ":api_auth_test",
        ":api_glaze_test",
        ":api_model_test",
        ":api_piece_test",
        ":api_workflow_test",
    ],
)
