load("@aspect_rules_py//py:defs.bzl", "py_library", "py_test")
load("//:python.bzl", "pytest_test")

py_library(
    name = "api_workflow_lib",
    srcs = [
        "dev/__init__.py",
        "dev/bootstrap.py",
        "utils.py",
        "workflow.py",
    ],
    deps = [
        "//backend:backend_lib",
        "@pypi//httpx",
        "@pypi//pyjwt",
    ],
)

py_library(
    name = "api_schema_lib",
    srcs = [
        "__init__.py",
        "auth/__init__.py",
        "auth/agent_auth.py",
        "auth/agent_token_views.py",
        "auth/jwt_auth.py",
        "auth/views.py",
        "auth/account_views.py",
        "auth/export_archive.py",
        "auth/export_data.py",
        "auth/export_views.py",
        "auth/google_views.py",
        "auth/mcp_token_views.py",
        "auth/invite_views.py",
        "auth/mock_idp_views.py",
        "auth/token_views.py",
        "auth/preferences_views.py",
        "dev/__init__.py",
        "dev/bootstrap.py",
        "analysis_views.py",
        "apps.py",
        "piece/__init__.py",
        "piece/views.py",
        "piece/helpers.py",
        "piece/image_resolvers.py",
        "piece/image_views.py",
        "piece/resolvers.py",
        "piece/showcase_views.py",
        "crop_run_views.py",
        "crops.py",
        "global_entries/__init__.py",
        "global_entries/logic.py",
        "global_entries/resolvers.py",
        "global_entries/views.py",
        "graphql/__init__.py",
        "graphql/context.py",
        "graphql/mutations.py",
        "graphql/schema.py",
        "graphql/types.py",
        "graphql/views.py",
        "health_views.py",
        "import_views.py",
        "invitations.py",
        "llm_schema.py",
        "logging.py",
        "models.py",
        "model_factories.py",
        "preferences.py",
        "r2.py",
        "serializer_factories.py",
        "serializer_registry.py",
        "serializers.py",
        "showcase/__init__.py",
        "showcase/hash.py",
        "showcase/music.py",
        "showcase/render.py",
        "showcase/storyboard.py",
        "tasks.py",
        "task_views.py",
        "telemetry_views.py",
        "uploads/__init__.py",
        "uploads/views.py",
        "urls.py",
        "views.py",
        "workflow_views.py",
    ],
    data = [
        "//:music_catalog_files",
        "//:storyboard_files",
    ],
    deps = [
        ":api_workflow_lib",
        "//backend:backend_lib",
        "@pypi//boto3",
        "@pypi//av",
        "@pypi//numpy",
        "@pypi//pillow_heif",
        "@pypi//djangorestframework_simplejwt",
        "@pypi//strawberry_graphql",
        "@pypi//strawberry_graphql_django",
    ],
)

py_library(
    name = "api_lib",
    srcs = [
        "admin.py",
        "manual_tile_imports.py",
        "model_factories.py",
        "tasks.py",
        "widgets.py",
    ],
    data = [
        ":api_runtime_commands",
        "//:workflow_files",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":api_schema_lib",
        ":api_workflow_lib",
        "@pypi//modal",
        "@pypi//redis",
    ],
)

py_library(
    name = "api_widgets_lib",
    srcs = ["widgets.py"],
    deps = [
        "//backend:backend_lib",
    ],
)

py_library(
    name = "api_manual_tile_imports_lib",
    srcs = ["manual_tile_imports.py"],
    deps = [
        ":api_schema_lib",
    ],
)

py_library(
    name = "api_admin_lib",
    srcs = ["admin.py"],
    deps = [
        ":api_schema_lib",
        ":api_widgets_lib",
    ],
)

filegroup(
    name = "api_commands",
    srcs = glob(["management/**/*.py"]),
)

filegroup(
    name = "api_runtime_commands",
    srcs = glob(
        ["management/**/*.py"],
        exclude = ["management/commands/import_test_tile_images.py"],
    ),
)

filegroup(
    name = "api_dev_commands",
    srcs = ["management/commands/import_test_tile_images.py"],
)

filegroup(
    name = "migrations",
    srcs = glob(["migrations/*.py"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "api_static",
    srcs = glob(["static/**"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "api_runtime_files",
    srcs = [
        "admin.py",
        "analysis_views.py",
        "apps.py",
        "auth/__init__.py",
        "auth/agent_auth.py",
        "auth/agent_token_views.py",
        "auth/jwt_auth.py",
        "auth/views.py",
        "auth/account_views.py",
        "auth/export_archive.py",
        "auth/export_data.py",
        "auth/export_views.py",
        "auth/google_views.py",
        "auth/invite_views.py",
        "auth/mcp_token_views.py",
        "auth/mock_idp_views.py",
        "auth/token_views.py",
        "auth/preferences_views.py",
        "dev/__init__.py",
        "dev/bootstrap.py",
        "piece/__init__.py",
        "piece/views.py",
        "piece/helpers.py",
        "piece/image_resolvers.py",
        "piece/image_views.py",
        "piece/resolvers.py",
        "piece/showcase_views.py",
        "crop_run_views.py",
        "crops.py",
        "global_entries/__init__.py",
        "global_entries/logic.py",
        "global_entries/resolvers.py",
        "global_entries/views.py",
        "graphql/__init__.py",
        "graphql/context.py",
        "graphql/mutations.py",
        "graphql/schema.py",
        "graphql/types.py",
        "graphql/views.py",
        "health_views.py",
        "import_views.py",
        "invitations.py",
        "llm_schema.py",
        "logging.py",
        "manual_tile_imports.py",
        "model_factories.py",
        "models.py",
        "preferences.py",
        "r2.py",
        "serializer_factories.py",
        "serializer_registry.py",
        "serializers.py",
        "showcase/__init__.py",
        "showcase/hash.py",
        "showcase/music.py",
        "showcase/render.py",
        "showcase/storyboard.py",
        "task_views.py",
        "telemetry_views.py",
        "tasks.py",
        "uploads/__init__.py",
        "uploads/views.py",
        "urls.py",
        "utils.py",
        "views.py",
        "widgets.py",
        "workflow.py",
        "workflow_views.py",
        ":api_runtime_commands",
        ":migrations",
        ":api_static",
        "__init__.py",
    ],
    visibility = ["//visibility:public"],
)

# ── Shared test infrastructure ────────────────────────────────────────────────

_PYTEST_DEPS = [
    "@pypi//pytest_django",
    "@pypi//pytest_env",
    "@pypi//tzdata",
]

_TEST_DATA = [
    "//:workflow_files",
    "//:storyboard_files",
    "//:music_catalog_files",
    "//:fixtures",
    "//:pytest_ini",
    "//backend:backend_test_settings",
    ":api_runtime_commands",
    ":migrations",
    ":api_static",
]

_TEST_ENV = {
    "DJANGO_SETTINGS_MODULE": "backend.test_settings",
    "GLAZE_DEV_BOOTSTRAP": "0",
    "GLAZE_BOOTSTRAP_COUNT": "5",
}

_CONFTEST = [
    "tests/__init__.py",
    "tests/conftest.py",
    "//tools:pytest_main.py",
]

# ── Granular API test targets ─────────────────────────────────────────────────
# Each target covers a coherent slice of the API so that changing one file
# only re-runs the tests that could be affected.

pytest_test(
    name = "api_workflow_test",
    tags = ["integration"],
    size = "medium",
    srcs = _CONFTEST + [
        "tests/test_custom_fields.py",
        "tests/test_workflow_globals.py",
        "tests/test_workflow_helpers.py",
    ],
    args = [
        "api/tests/test_workflow_helpers.py",
        "api/tests/test_workflow_globals.py",
        "api/tests/test_custom_fields.py",
    ],
    data = _TEST_DATA,
    env = _TEST_ENV,
    main = "//tools:pytest_main.py",
    deps = [":api_schema_lib"] + _PYTEST_DEPS,
    expected_coverage = ["api/workflow.py", "api/utils.py"],
)

pytest_test(
    name = "api_model_test",
    tags = ["integration"],
    size = "medium",
    srcs = _CONFTEST + [
        "tests/test_async_maintenance.py",
        "tests/test_async_tasks.py",
        "tests/test_crop_run.py",
        "tests/test_generate_cropped_image.py",
        "tests/test_global_entries.py",
        "tests/test_globals.py",
        "tests/test_host_settings.py",
        "tests/test_image_field_migration.py",
        "tests/test_model_factory.py",
        "tests/test_task_progress_webhook.py",
        "tests/test_utils.py",
    ],
    args = [
        "api/tests/test_async_maintenance.py",
        "api/tests/test_async_tasks.py",
        "api/tests/test_crop_run.py",
        "api/tests/test_generate_cropped_image.py",
        "api/tests/test_model_factory.py",
        "api/tests/test_globals.py",
        "api/tests/test_utils.py",
        "api/tests/test_host_settings.py",
        "api/tests/test_global_entries.py",
        "api/tests/test_image_field_migration.py",
        "api/tests/test_task_progress_webhook.py",
    ],
    data = _TEST_DATA,
    env = _TEST_ENV,
    main = "//tools:pytest_main.py",
    deps = [":api_schema_lib"] + _PYTEST_DEPS,
    expected_coverage = ["api/models.py", "api/model_factories.py", "api/utils.py"],
)

pytest_test(
    name = "api_otel_test",
    tags = ["integration"],
    size = "small",
    srcs = _CONFTEST + [
        "tests/test_otel.py",
        "tests/test_telemetry.py",
    ],
    args = [
        "api/tests/test_otel.py",
        "api/tests/test_telemetry.py",
    ],
    data = _TEST_DATA,
    env = _TEST_ENV,
    main = "//tools:pytest_main.py",
    deps = [":api_schema_lib"] + _PYTEST_DEPS,
    expected_coverage = ["api/logging.py", "api/telemetry_views.py"],
)

pytest_test(
    name = "api_piece_test",
    tags = ["integration"],
    size = "medium",
    srcs = _CONFTEST + [
        "tests/test_analysis.py",
        "tests/test_keepsake_storyboard.py",
        "tests/test_music_catalog.py",
        "tests/test_showcase_video.py",
        "tests/test_patch_current_state.py",
        "tests/test_piece_detail.py",
        "tests/test_piece_showcase_validation.py",
        "tests/test_piece_state_admin_relational.py",
        "tests/test_piece_states.py",
        "tests/test_pieces_create.py",
        "tests/test_pieces_list.py",
        "tests/test_graphql_mutations.py",
        "tests/test_graphql_pieces.py",
        "tests/test_sealed_state.py",
        "tests/test_editable_mode.py",
        "tests/test_images.py",
        "tests/test_issue_337.py",
        "tests/test_patch_image_crop.py",
        "tests/test_upload_image.py",
    ],
    args = [
        "api/tests/test_pieces_create.py",
        "api/tests/test_pieces_list.py",
        "api/tests/test_graphql_mutations.py",
        "api/tests/test_graphql_pieces.py",
        "api/tests/test_piece_detail.py",
        "api/tests/test_piece_states.py",
        "api/tests/test_patch_current_state.py",
        "api/tests/test_sealed_state.py",
        "api/tests/test_analysis.py",
        "api/tests/test_keepsake_storyboard.py",
        "api/tests/test_music_catalog.py",
        "api/tests/test_showcase_video.py",
        "api/tests/test_piece_showcase_validation.py",
        "api/tests/test_piece_state_admin_relational.py",
        "api/tests/test_editable_mode.py",
        "api/tests/test_images.py",
        "api/tests/test_issue_337.py",
        "api/tests/test_patch_image_crop.py",
        "api/tests/test_upload_image.py",
    ],
    data = _TEST_DATA + [":api_dev_commands"],
    env = _TEST_ENV,
    main = "//tools:pytest_main.py",
    deps = [":api_schema_lib", ":api_admin_lib"] + _PYTEST_DEPS,
    expected_coverage = [
        "api/piece/views.py",
        "api/piece/image_views.py",
        "api/piece/showcase_views.py",
        "api/analysis_views.py",
        "api/workflow_views.py",
        "api/showcase/hash.py",
        "api/showcase/storyboard.py",
        "api/showcase/render.py",
        "api/tasks.py",
    ],
)

pytest_test(
    name = "api_auth_test",
    tags = ["integration"],
    size = "medium",
    srcs = _CONFTEST + [
        "tests/test_agent_auth.py",
        "tests/test_auth.py",
        "tests/test_mcp_token_exchange.py",
    ],
    args = [
        "api/tests/test_agent_auth.py",
        "api/tests/test_auth.py",
        "api/tests/test_mcp_token_exchange.py",
    ],
    data = _TEST_DATA,
    env = _TEST_ENV,
    main = "//tools:pytest_main.py",
    deps = [":api_schema_lib"] + _PYTEST_DEPS,
    expected_coverage = [
        "api/auth/agent_auth.py",
        "api/auth/agent_token_views.py",
        "api/auth/mcp_token_views.py",
        "api/auth/views.py",
    ],
)

pytest_test(
    name = "api_health_test",
    tags = ["integration"],
    size = "small",
    srcs = _CONFTEST + [
        "tests/test_health.py",
    ],
    args = ["api/tests/test_health.py"],
    data = _TEST_DATA,
    env = _TEST_ENV,
    main = "//tools:pytest_main.py",
    deps = [":api_schema_lib"] + _PYTEST_DEPS,
    expected_coverage = ["api/health_views.py"],
)

pytest_test(
    name = "api_invitation_test",
    tags = ["integration"],
    size = "medium",
    srcs = _CONFTEST + [
        "tests/test_invitations.py",
    ],
    args = ["api/tests/test_invitations.py"],
    data = _TEST_DATA,
    env = _TEST_ENV,
    main = "//tools:pytest_main.py",
    deps = [":api_schema_lib"] + _PYTEST_DEPS,
    expected_coverage = ["api/invitations.py"],
)

pytest_test(
    name = "api_glaze_test",
    tags = ["integration"],
    size = "medium",
    srcs = _CONFTEST + [
        "tests/test_glaze_combination.py",
        "tests/test_glaze_combination_admin.py",
        "tests/test_glaze_combination_picker.py",
        "tests/test_manual_square_crop_import.py",
        "tests/test_public_library.py",
        "tests/test_public_library_commands.py",
    ],
    args = [
        "api/tests/test_glaze_combination.py",
        "api/tests/test_glaze_combination_admin.py",
        "api/tests/test_glaze_combination_picker.py",
        "api/tests/test_manual_square_crop_import.py",
        "api/tests/test_public_library.py",
        "api/tests/test_public_library_commands.py",
    ],
    data = _TEST_DATA,
    env = _TEST_ENV,
    main = "//tools:pytest_main.py",
    deps = [":api_schema_lib", ":api_admin_lib", ":api_manual_tile_imports_lib"] + _PYTEST_DEPS,
    expected_coverage = ["api/import_views.py", "api/manual_tile_imports.py"],
)

pytest_test(
    name = "api_admin_test",
    tags = ["integration"],
    size = "medium",
    srcs = _CONFTEST + [
        "tests/test_admin_exports.py",
        "tests/test_admin_scope.py",
        "tests/test_r2_image_widget.py",
        "tests/test_management_commands.py",
        "tests/test_gc_derived_images.py",
        "tests/test_r2_uploads.py",
        "tests/test_convert_image_to_jpeg.py",
    ],
    args = [
        "api/tests/test_admin_exports.py",
        "api/tests/test_admin_scope.py",
        "api/tests/test_r2_image_widget.py",
        "api/tests/test_management_commands.py",
        "api/tests/test_gc_derived_images.py",
        "api/tests/test_r2_uploads.py",
        "api/tests/test_convert_image_to_jpeg.py",
    ],
    data = _TEST_DATA + [":api_dev_commands"],
    env = _TEST_ENV,
    main = "//tools:pytest_main.py",
    deps = [":api_schema_lib", ":api_admin_lib"] + _PYTEST_DEPS,
    expected_coverage = [
        "api/admin.py",
        "api/uploads/views.py",
        "api/r2.py",
        "api/management/commands/*.py",
    ],
)

pytest_test(
    name = "api_preferences_test",
    tags = ["integration"],
    size = "small",
    srcs = _CONFTEST + [
        "tests/test_preferences.py",
    ],
    args = ["api/tests/test_preferences.py"],
    data = _TEST_DATA + [
        "//:user_preferences_files",
    ],
    env = _TEST_ENV,
    main = "//tools:pytest_main.py",
    deps = [":api_schema_lib"] + _PYTEST_DEPS,
    expected_coverage = ["api/preferences.py"],
)

# ── mypy type-check ───────────────────────────────────────────────────────────
# Runs mypy over all of api/ with the full django + DRF plugins enabled.
# Runs as a single target (coarser than per-library) because mypy_django_plugin
# requires full Django app initialization, which isn't available in per-target
# Bazel sandboxes. TODO: revisit with rules_mypy once resolved — see
# https://github.com/shaoster/glaze/issues/157

py_test(
    name = "api_mypy",
    size = "medium",
    srcs = ["//tools:mypy_main.py"],
    args = ["api/"],
    data = [
        "//:mypy.ini",
        "//:workflow_files",
    ],
    env = {"DJANGO_SETTINGS_MODULE": "backend.settings"},
    main = "//tools:mypy_main.py",
    tags = [
        "lint",
        "no-coverage",
    ],
    deps = [
        ":api_lib",
        "@pypi//mypy",
        "@pypi//mypy_extensions",
        "@pypi//django_stubs",
        "@pypi//django_stubs_ext",
        "@pypi//djangorestframework_stubs",
        "@pypi//types_requests",
    ],
)

pytest_test(
    name = "api_llm_schema_test",
    tags = ["integration"],
    size = "medium",
    srcs = _CONFTEST + [
        "tests/test_llm_schema.py",
    ],
    args = ["api/tests/test_llm_schema.py"],
    data = _TEST_DATA,
    env = _TEST_ENV,
    main = "//tools:pytest_main.py",
    deps = [":api_schema_lib"] + _PYTEST_DEPS,
    expected_coverage = ["api/llm_schema.py"],
)

pytest_test(
    name = "api_migration_test",
    tags = ["integration"],
    size = "small",
    srcs = _CONFTEST + [
        "tests/test_migrations_completeness.py",
    ],
    args = ["api/tests/test_migrations_completeness.py"],
    data = _TEST_DATA,
    env = _TEST_ENV,
    main = "//tools:pytest_main.py",
    deps = [":api_schema_lib"] + _PYTEST_DEPS,
    expected_coverage = ["api/migrations/*.py"],
)

# ── API test suite ────────────────────────────────────────────────────────────
# Aggregate target: `bazel test //api:api_test` runs all API tests.
# Individual targets above run only when their inputs change.

test_suite(
    name = "api_test",
    tests = [
        ":api_admin_test",
        ":api_llm_schema_test",
        ":api_auth_test",
        ":api_glaze_test",
        ":api_health_test",
        ":api_invitation_test",
        ":api_migration_test",
        ":api_model_test",
        ":api_otel_test",
        ":api_piece_test",
        ":api_preferences_test",
        ":api_workflow_test",
    ],
)
