load("@rules_python//python:defs.bzl", "py_library")
load("@pip//:requirements.bzl", "requirement")

py_library(
    name = "backend_lib",
    srcs = [
        "__init__.py",
        "asgi.py",
        "settings.py",
        "test_settings.py",
        "urls.py",
        "wsgi.py",
    ],
    data = ["//:workflow_files"],
    deps = [
        requirement("django"),
        requirement("djangorestframework"),
        requirement("django-cors-headers"),
        requirement("drf-spectacular"),
        requirement("dj-database-url"),
        requirement("whitenoise"),
        requirement("cloudinary"),
        requirement("google-auth"),
        requirement("requests"),
        requirement("pyyaml"),
        requirement("django-admin-sortable2"),
        requirement("jsonschema"),
        requirement("jsonschema-specifications"),
        requirement("referencing"),
        requirement("Pillow"),
        requirement("psycopg2-binary"),
        requirement("django-import-export"),
        requirement("django-meta"),
        requirement("aiofiles"),
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "backend_runtime_files",
    srcs = [
        "__init__.py",
        "asgi.py",
        "settings.py",
        "test_settings.py",
        "urls.py",
        "wsgi.py",
    ],
    visibility = ["//visibility:public"],
)
