load("@aspect_rules_py//py:defs.bzl", "py_library")

py_library(
    name = "backend_lib",
    srcs = [
        "__init__.py",
        "asgi.py",
        "middleware.py",
        "otel.py",
        "settings.py",
        "test_settings.py",
        "urls.py",
        "wsgi.py",
    ],
    data = ["//:workflow_files"],
    deps = [
        "@pypi//django",
        "@pypi//djangorestframework",
        "@pypi//django_cors_headers",
        "@pypi//drf_spectacular",
        "@pypi//dj_database_url",
        "@pypi//whitenoise",
        "@pypi//cloudinary",
        "@pypi//google_auth",
        "@pypi//requests",
        "@pypi//pyyaml",
        "@pypi//django_admin_sortable2",
        "@pypi//jsonschema",
        "@pypi//jsonschema_specifications",
        "@pypi//referencing",
        "@pypi//pillow",
        "@pypi//psycopg2_binary",
        "@pypi//django_import_export",
        "@pypi//django_meta",
        "@pypi//aiofiles",
        "@pypi//opentelemetry_api",
        "@pypi//opentelemetry_sdk",
        "@pypi//opentelemetry_instrumentation_asgi",
        "@pypi//opentelemetry_instrumentation_psycopg2",
        "@pypi//opentelemetry_exporter_otlp_proto_grpc",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "backend_runtime_files",
    srcs = [
        "__init__.py",
        "asgi.py",
        "middleware.py",
        "otel.py",
        "settings.py",
        "test_settings.py",
        "urls.py",
        "wsgi.py",
    ],
    visibility = ["//visibility:public"],
)
