load("@aspect_rules_js//js:defs.bzl", "js_library", "js_run_binary")

# ── TypeScript generated types ────────────────────────────────────────────────
# Runs generate-types.mjs with openapi.json as input.
# Declared here (not in //web) because Bazel forbids outs with up-level '..'
# references — outputs must live within the declaring package.
#
# Cache behaviour: re-runs only when openapi.json content changes.

js_run_binary(
    name = "generated_types_gen",
    srcs = ["//web:openapi_schema"],
    outs = ["src/generated-types.ts"],
    tool = "//web:generate_types_bin",
    args = [
        "$(execpath //web:openapi_schema)",
        "$(execpath src/generated-types.ts)",
    ],
)

js_library(
    name = "generated_types",
    srcs = [":generated_types_gen"],
    visibility = ["//visibility:public"],
)

# Shared TypeScript/JS source used by both the web app and its tests.
# generated-types.ts is produced above and excluded from the glob.

js_library(
    name = "frontend_common_lib",
    srcs = glob(
        [
            "src/**/*.ts",
            "src/**/*.tsx",
        ],
        exclude = [
            "src/generated-types.ts",  # genrule output, declared separately
            "**/*.test.ts",
            "**/*.test.tsx",
        ],
    ),
    deps = ["//:workflow_js"],
    visibility = ["//visibility:public"],
)
